--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "formik": "^2.2.9",
+    "gsap": "^3.12.5",
     "moment": "^2.29.4",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -24,6 +25,7 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.6.1",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
